fix the issue of unable to scroll on mobile or small screen devices

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: "PP mori";
     src: url(fonts/ppmori.ttf);
 }
+@font-face {
+    font-family: "pixel";
+    src: url(fonts/dotty.ttf);
+}
 
 * {
     margin: 0;
@@ -15,7 +19,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow: auto;
     scroll-behavior: smooth;
 }
 .loader__container{
@@ -186,11 +190,11 @@ html, body {
     z-index:102;
 }
 #nav h2{
-    font-weight: 900;
-    font-size: 4vmin;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 500;
+    font-size: 7vmin;
+    font-family: "pixel", 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     display: flex;
-    align-items: end;
+    align-items: center;
     gap: 1vmin;
 }
 #nav h2 svg{
@@ -260,12 +264,13 @@ a{
     border-bottom: 2px solid #6c6c6c;
     position: relative;
     z-index: 9;
+
 }
 
 .page2 h2{
     font-size:13vmin;
     font-weight: 500;
-    color: #111;
+    color: #111 ;
 display: flex;
 align-items: center;
 flex-wrap: wrap;
@@ -338,7 +343,7 @@ gap: 3vmin;
     margin-top: 3vmin;
     mix-blend-mode: difference;
     font-size: 5vmin;
-
+    font-weight: 200;
 
 }
 .page3-part1, .page3-part2{
@@ -455,11 +460,7 @@ footer{
     min-height: 90vh;
     width: 100%;
     background-color: #EDBFFF;
-}
-
-
-footer form button{
-
+    height: auto;
 }
 
 
@@ -468,9 +469,9 @@ footer form button{
     .cursor{
         display: none;
     }
-    #loader{
+    /* #loader{
         display: none;
-    }
+    } */
     .page1{
         padding: 18vh 0;
     }
